--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <section id="definicion">
             <h1 class="encabezado">¿Qué es la Inteligencia Artificial?</h1>
             <div class="imagenes">
-                <img src="../img/imagen1.png" alt="Definición de IA" width="100">
+                <img src="img/imagen1.png" alt="Definición de IA" width="100">
             </div>
             <p>La inteligencia artificial (IA) es la rama de las ciencias
                 computacionales que se encarga del diseño y construcción de sistemas capaces de realizar tareas asociadas con
@@ -77,7 +77,7 @@
             <div class="fila-secundaria">
                 <div class="columna">
                     <div class="imagenes-aplicaciones">
-                        <img src="../img/imagen2.png" alt="Asitente virtual - IA" width="100">
+                        <img src="img/imagen2.png" alt="Asitente virtual - IA" width="100">
                     </div>
                     <p>Una de estas aplicaciones de la IA es el <strong>desarrollo
                         de asistentes virtuales</strong> de voz integrados en
@@ -91,7 +91,7 @@
                 </div>
                 <div class="columna">
                     <div class="imagenes-aplicaciones">
-                        <img src="../img/imagen3.png" alt="Vehiculo Inteligente - IA" width="100">
+                        <img src="img/imagen3.png" alt="Vehiculo Inteligente - IA" width="100">
                     </div>
                     <p>Otro de los ámbitos en los que se está aplicando la
                         IA es en el mundo del automóvil con su
@@ -125,7 +125,7 @@
                 <div class="columna">
                     <h4>Automatización de procesos</h4>
                     <div class="imagenes-aplicaciones">
-                        <img src="../img/imagen4.jpg" alt="Automatización IA" width="100">
+                        <img src="img/imagen4.jpg" alt="Automatización IA" width="100">
                     </div>
                     <p>Mediante el uso de algoritmos, la adquisición de datos y el aprendizaje automático,
                         la IA puede identificar patrones y relaciones dentro de los datos. Un ejemplo de lo anterior es
@@ -134,7 +134,7 @@
                 <div class="columna">
                     <h4>Reducción de errores</h4>
                     <div class="imagenes-aplicaciones">
-                        <img src="../img/imagen5.png" alt="Reducción-error-IA" width="100">
+                        <img src="img/imagen5.png" alt="Reducción-error-IA" width="100">
                     </div>
                     <p>Algunos trabajos exigen la repetición mecánica de movimientos o de acciones concretas
                         (como la introducción de datos). Si se encarga la IA de afrontar este tipo de labores
@@ -143,7 +143,7 @@
                 <div class="columna">
                     <h4>Desplazamiento laboral</h4>
                     <div class="imagenes-aplicaciones">
-                        <img src="../img/imagen6.jpg" alt="Desplazamiento-laboral-IA" width="100">
+                        <img src="img/imagen6.jpg" alt="Desplazamiento-laboral-IA" width="100">
                     </div>
                     <p> Estas nuevas “máquinas” en su búsqueda de productividad, claramente mejoran tiempos,
                         evitan errores, reducen gastos, etc., lo que permite que en labores que antes realizaban
@@ -153,7 +153,7 @@
                 <div class="columna">
                     <h4>Privacidad y seguridad</h4>
                     <div class="imagenes-aplicaciones">
-                        <img src="../img/imagen7.png" alt="Desplazamiento-laboral-IA" width="100">
+                        <img src="img/imagen7.png" alt="Desplazamiento-laboral-IA" width="100">
                     </div>
                     <p> Es imperativo reconocer que los sistemas que emplean inteligencia artificial, carecen en la actualidad de las capacidades necesarias
                         para garantizar y salvaguardar la confidencialidad de los datos. Asimismo, muchas IA son usadas como
