--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Menú de navegación -->
     <header>
         <div class="logo">
-            <img src="../img/logo-IA.jpeg" alt="Logo de IA" width="100">
+            <img src="img/logo-IA.jpeg" alt="Logo de IA" width="100">
         </div>
         <nav>
             <ul>
