--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <p>
               Este espacio está diseñado para todos: tanto si eres un apasionado de la tecnología, un profesional que busca expandir sus conocimientos, o simplemente alguien curioso por entender el impacto de la IA en el mundo. Acompáñanos mientras exploramos cómo la inteligencia artificial está moldeando una nueva era de desarrollo y crecimiento.
             </p>
-            <a href="#contacto" class="btn-explorar">Descubre Más</a>
+            <a href="#contacto" class="btn-explorar">Deja tu comentario para más...</a>
         </section>
         
         <hr class="linea-separadora">
